--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mocha": "^8.0.1",
+    "newsapi": "^2.4.0",
     "nodemailer": "^6.4.10"
   }
 }
